--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+/* color blue #1b96fe; */
+/* Logo */
 
+	#logo {
+		height: auto;
+		width: 20%;
+	}
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -2225,7 +2231,7 @@
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
-		background-color: #37c0fb;
+		background-color: #1b96fe;
 		border-radius: 5px;
 		border: 0;
 		color: #fff;
@@ -2367,7 +2373,7 @@
 			display: block;
 			width: 100%;
 			height: 0.75em;
-			background-color: #37c0fb;
+			background-color: #1b96fe;
 			background-image: url("images/bg01.png");
 		}
 
@@ -2414,7 +2420,7 @@
 						bottom: -0.5em;
 						left: 50%;
 						margin-left: -0.375em;
-						background-color: #37c0fb;
+						background-color: #1b96fe;
 						background-image: url("images/bg01.png");
 					}
 
@@ -2537,7 +2543,7 @@
 		}
 
 		.wrapper.style3 {
-			background-color: #37c0fb;
+			background-color: #1b96fe;
 			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
@@ -2547,7 +2553,7 @@
 
 			.wrapper.style3 .button {
 				background: #fff;
-				color: #474747;
+				color: #1b96fe;
 			}
 
 				.wrapper.style3 .button:hover {
