--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2481,7 +2481,7 @@
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../../images/coffee.jpg");
 		background-position: center center;
 		background-size: cover;
 		height: 28em;
